--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="windowHeader">#FF888888</color>
+    <color name="windowHeaderText">#FFFFFFFF</color>
+    <color name="windowHeaderClose">#FFEE7777</color>
+    <color name="windowBody">#FFDDDDDD</color>
+    <color name="windowSend">#FF448844</color>
 </resources>
