--- a/app/src/main/res/layout/window.xml
+++ b/app/src/main/res/layout/window.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.localazy.quicknote.window.WindowContentLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -67,4 +67,4 @@
             android:tintMode="src_in"
             tools:ignore="ContentDescription" />
     </LinearLayout>
-</LinearLayout>
+</com.localazy.quicknote.window.WindowContentLayout>
